--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,25 @@
 {% extends 'base.html' %}
 {% block head %}
 
-<Title>Calculator</Title>
+    <Title>Calculator</Title>
 
 {% endblock %}
 {% block body %}
 
-<div class="header">
-    <h1>Four Function Calculator</h1>
-</div>
+    <div class="header">
+        <h1>Four Function Calculator</h1>
+    </div>
 
-<form>
-    <br>
-    <label for="input">Input:</label>
-    <input type="text" id="input" name="input">
-    <input type="submit" value="Submit">
-</form>
+    <form method="POST">
+        <br>
+        <label for="input">Input:</label>
+        <input type="text" id="input" name="input">
+        <input type="submit" value="Submit">
+    </form>
+
+    {% if result is not none %}
+        <h2>Result:</h2>
+        <p>{{ result }}</p>
+    {% endif %}
 
 {% endblock %}
