--- a/Backend/templates/base.html
+++ b/Backend/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     {% block head %}{% endblock %}
 </head>
 <body>
