--- a/frontend/src/styles/Calculator.css
+++ b/frontend/src/styles/Calculator.css
@@ -1,15 +1,30 @@
+@font-face {
+	font-family: "digital-7";
+	src: url(../assets/digital-7.ttf);
+	font-weight: normal;
+	font-style: normal;
+}
+
 #calculator-body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	outline: 3px solid rgb(106, 135, 221);
-	background-color: rgb(131, 158, 241);
+	outline: 2px solid #00185a;
+	background: #022a70;
+	background: linear-gradient(
+		33deg,
+		rgba(2, 42, 112, 1) 0%,
+		rgba(1, 55, 143, 1) 50%,
+		rgba(4, 74, 179, 1) 100%
+	);
 	border-radius: 10px;
 	padding: 2%;
+	width: 100%;
+	max-width: 400px;
 	aspect-ratio: 5 / 8;
+	height: auto;
 	max-height: 80vh;
-	max-width: 50vh;
-	height: 100%;
+	margin: auto;
 }
 
 #calculator-buttons {
@@ -17,7 +32,6 @@
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(6, 1fr);
 	gap: 2%;
-	border-radius: 10px;
 	height: 65%;
 }
 
@@ -28,18 +42,26 @@
 	background-color: #cce3f9;
 	border-radius: 8px;
 	padding: 3%;
-	font-size: 2rem;
+	font-size: 3rem;
 	text-align: right;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
 	color: black;
-	font-family: "Courier New", monospace;
+	font-family: "digital-7", "Courier New", monospace;
 	margin-top: 5%;
-	box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.3), 4px 4px 4px rgb(9, 75, 188);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	text-wrap: wrap;
+	background: #3f4c38;
+	background: linear-gradient(
+		47deg,
+		rgba(63, 76, 56, 1) 0%,
+		rgba(121, 124, 81, 1) 50%,
+		rgba(145, 144, 100, 1) 100%
+	);
 }
 
 .calculator-buttonRed,
@@ -47,11 +69,14 @@
 .calculator-buttonWhite {
 	width: 100%;
 	height: 100%;
-	border-radius: 4px;
+	border-radius: 10px;
+	border: solid 2px #000;
 	font-family: "Courier New", monospace;
+	font-weight: bold;
 	font-size: 1.5em;
 	box-shadow: 2px 2px 4px rgba(0, 0, 0.2);
 	transition-duration: 0.25s;
+	cursor: pointer;
 }
 
 .calculator-buttonRed:active,
