--- a/frontend/src/styles/Calculator.css
+++ b/frontend/src/styles/Calculator.css
@@ -83,6 +83,8 @@
 .calculator-buttonBlack:active,
 .calculator-buttonWhite:active {
 	box-shadow: 0 0 0 0 #000;
+	transform: scale(0.97);
+	box-shadow: inset 0 0 5px #000;
 	transition-duration: 0.15s;
 }
 
